--- a/WebContent/backstage/userList.html
+++ b/WebContent/backstage/userList.html
@@ -47,15 +47,15 @@
             striped:true,
             checkOnSelect:true,
             selectOnCheck:true,
-            collapsible:true,
+            collapsible:false,
             toolbar:'#tb',
             pageSize:10,
             /* data:getData(), */
             columns:[[
                 {field:'ck',checkbox:true,width:'5%'},
                 {field:'id',title:'用户编号',width:'10%',align:'center',sortable:true},
-                {field:'username',title:'用户名',width:'20%',align:'center',editor:'text'},
-                {field:'password',title:'密码',width:'35%',align:'center',editor:'text'},
+                {field:'username',title:'用户名',width:'43%',align:'center',editor:'text'},
+                {field:'password',title:'密码',width:'42%',align:'center',editor:'text'},
                 /* {field:'pname',title:'信用度',width:'10%',align:'center',editor:'text'},
                 {field:'pname',title:'余额',width:'10%',align:'center',editor:'text'},
                 {field:'status',title:'状态',width:'10%',align:'center',editor:{
