调试通用户接口调用

--- a/WebContent/backstage/brand.html
+++ b/WebContent/backstage/brand.html
@@ -107,7 +107,7 @@
         $.ajax({
     		type:"get",
     		async:true,
-    		url:"../goodsType/list.action",
+    		url:"../brand/list.action",
     		dataType:"json",
     		data:{},
     		success:function(data){
