--- a/WebContent/backstage/main.html
+++ b/WebContent/backstage/main.html
@@ -82,7 +82,7 @@
                     </a>
                     <ul class="sider-nav-s">
                         <li><a href="javascript:void(0);" onclick="toPage('商品审核','index.html',this);">商品审核</a></li>
-                        <li><a href="javascript:void(0);" onclick="toPage('类型管理','goodType.html',this);">商品类型</a></li>
+                        <li><a href="javascript:void(0);" onclick="toPage('类型管理','brand.html',this);">商品类型</a></li>
                         <li><a href="javascript:void(0);" onclick="toPage('品牌管理','ppList.html',this);">品牌管理</a></li>
                     </ul>
                 </li>
