--- a/WebContent/backstage/userList.html
+++ b/WebContent/backstage/userList.html
@@ -53,18 +53,20 @@
             /* data:getData(), */
             columns:[[
                 {field:'ck',checkbox:true,width:'5%'},
-                {field:'id',title:'用户编号',width:'10%',align:'center',sortable:true},
-                {field:'username',title:'用户名',width:'43%',align:'center',editor:'text'},
-                {field:'password',title:'密码',width:'42%',align:'center',editor:'text'},
-                /* {field:'pname',title:'信用度',width:'10%',align:'center',editor:'text'},
-                {field:'pname',title:'余额',width:'10%',align:'center',editor:'text'},
-                {field:'status',title:'状态',width:'10%',align:'center',editor:{
+                {field:'uId',title:'用户编号',width:'20%',align:'center',sortable:true},
+                {field:'uName',title:'用户名',width:'10%',align:'center',editor:'text'},
+                {field:'uPassword',title:'密码',width:'10%',align:'center',editor:'text'},
+                {field:'uMail',title:'邮箱',width:'10%',align:'center',editor:'text'},
+                {field:'uPhone',title:'手机',width:'10%',align:'center',editor:'text'},
+                {field:'uFraction',title:'信用度',width:'10%',align:'center',editor:'text'},
+                {field:'uPiture',title:'头像',width:'15%',align:'center',editor:'text'},
+                {field:'uSign',title:'状态',width:'10%',align:'center',editor:{
 					type:'checkbox',
 					options:{
-						on: 'normal',
-						off: 'abnormal'
+						on: 1,
+						off: 0
 					}
-				}}, */
+				}},
             ]],
             onDblClickRow: onClickCell,
             onClickRow:function(rowIndex, rowData){
@@ -121,7 +123,7 @@
         $.ajax({
     		type:"get",
     		async:true,
-    		url:"../user/list.action",
+    		url:"../users/list.action",
     		dataType:"json",
     		data:{},
     		success:function(data){
@@ -176,7 +178,7 @@
     	$.ajax({
 			type:"post",
 			async:true,
-			url:"../user/listByConds.action",
+			url:"../users/listByConds.action",
 			dataType:"json",
 			data:{
 				conds:JSON.stringify(conds)
@@ -260,7 +262,7 @@
                     $.ajax({
             			type:"post",
             			async:true,
-            			url:"../user/delete.action",
+            			url:"../users/delete.action",
             			dataType:"json",
             			data:{
             				id:row.id
@@ -301,7 +303,7 @@
             	$.ajax({
         			type:"post",
         			async:true,
-        			url:"../user/save.action",
+        			url:"../users/save.action",
         			dataType:"json",
         			data:{
         				username:row.username,
@@ -319,7 +321,7 @@
             	$.ajax({
         			type:"post",
         			async:true,
-        			url:"../user/update.action",
+        			url:"../users/update.action",
         			dataType:"json",
         			data:{
         				id:row.id,
