--- a/WebContent/backstage/main.html
+++ b/WebContent/backstage/main.html
@@ -82,8 +82,7 @@
                     </a>
                     <ul class="sider-nav-s">
                         <li><a href="javascript:void(0);" onclick="toPage('商品审核','index.html',this);">商品审核</a></li>
-                        <li><a href="javascript:void(0);" onclick="toPage('类型管理','brand.html',this);">商品类型</a></li>
-                        <li><a href="javascript:void(0);" onclick="toPage('品牌管理','ppList.html',this);">品牌管理</a></li>
+                        <li><a href="javascript:void(0);" onclick="toPage('类型管理','brand.html',this);">品牌管理</a></li>
                     </ul>
                 </li>
                 <li class="firstMenu">
@@ -146,7 +145,7 @@
 
 <script type="text/javascript">
 	$(function(){
-		var loginUser = JSON.parse(Util.getLocalStorage("loginUser"));
+		var loginUser = JSON.parse(Util.getSession("adminloginUser"));
 		if(loginUser == null || loginUser == ''){
 			alert('请先登录!');
 			window.location.href = 'login.html';
