--- a/WebContent/backstage/main.html
+++ b/WebContent/backstage/main.html
@@ -83,6 +83,7 @@
                     <ul class="sider-nav-s">
                         <li><a href="javascript:void(0);" onclick="toPage('商品审核','index.html',this);">商品审核</a></li>
                         <li><a href="javascript:void(0);" onclick="toPage('类型管理','brand.html',this);">品牌管理</a></li>
+                        <li><a href="javascript:void(0);" onclick="toPage('程度管理','degree.html',this);">程度管理</a></li>
                     </ul>
                 </li>
                 <li class="firstMenu">
