分页问题未处理完

--- a/WebContent/backstage/index.html
+++ b/WebContent/backstage/index.html
@@ -122,7 +122,7 @@
 			$.ajax({
 				type : "get",
 				async : true,
-				url : "../goods/list.action",
+				url : "../goods/listToBack.action",
 				dataType : "json",
 				data : {},
 				success : function(data) {
